--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,17 @@
 #cs1300-gallery {
   background-color: lightblue;
+  height: 60vh;
 }
 
-.gallery-container {
+.gallery-item-container {
   /* TODO add styles (hint: use flex!) https://www.w3schools.com/cssref/ */
+  height: 40vh;
+  width: 100vw;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.gallery-item {
+  height: 90%;
 }
